Fixed website stuck on loading if not logged in | disable back arrow for selecting date when current week

--- a/src/views/Kitchen/KitchenPage.module.css
+++ b/src/views/Kitchen/KitchenPage.module.css
@@ -34,6 +34,13 @@
   background-color: var(--orange);
 }
 
+.buttonDate:disabled,
+button[disabled] {
+  background-color: gray;
+  border: none;
+  cursor: default;
+}
+
 .dateSmall {
   font-size: 1rem;
 }
